@@ -61,21 +61,8 @@
 	  	<%= debug(flash[:error]) %>
 	  	<br /><hr /><br />
 	  <% end %>
-  	  Definition
-	  <%= debug @definition %>
-	  <br /><hr /><br />
-  	  User
-	  <%= debug current_user %>
-	  <% if current_user.teams %>
-		<br /><hr /><br />
-	  	<%= debug current_user.team_names %>
-	  <% end %>
-	  <br /><hr /><br />
   	  Filters <% if @filters %> - Provider filter count = <%= @filters["providers"].count %> <% end %>
 	  <%= debug @filters %>
-	  <br /><hr /><br />
-  	  Providers
-  	  <%= debug @providers_for_filter.to_a %>
   <% end %>
 </div><!-- end #container -->
 
