@@ -199,7 +199,13 @@
 			<% unless (@selected_provider) %>
 				<dl>
 					<dt># of Providers: </dt>
-					<dd><%= Provider.all.userfilter(current_user).count %> </dd>
+					<dd><%= 
+							begin
+								Provider.all.userfilter(current_user).count
+							rescue
+								0
+							end 
+						%> </dd>
 				</dl>
 			<% end %>
 			<div class="clear"></div>
